<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_agendapastoral"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_AgendaPastoral" />
    <item
        android:id="@+id/navigation_pedidooracao"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_pedidooracao" />

    <item
        android:id="@+id/navigation_eventos"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_eventos" />

    <item
        android:id="@+id/navigation_boletim"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_boletim" />
</menu>
